--- a/index.html
+++ b/index.html
@@ -4,247 +4,36 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Nexa - Tu Bot de Discord</title>
-  
-  <!-- META para compartir -->
   <meta property="og:title" content="Nexa - Tu Bot de Discord">
   <meta property="og:description" content="Un bot de Discord multifuncional para moderación, entretenimiento y más.">
   <meta property="og:image" content="Img/logo.jpg">
   <meta property="og:type" content="website">
   <meta name="theme-color" content="#8a2be2">
-
-  <!-- Favicon -->
   <link rel="icon" href="Img/logo.jpg" type="image/jpg">
 
-  <style>
-    :root {
-      --violeta: #8a2be2;
-      --fondo: #0e0e11;
-      --text: #ffffff;
-      --gris: #1a1a1d;
-      --sombra: rgba(0,0,0,0.5);
-      --gradiente: linear-gradient(90deg, #8a2be2, #a64bf4, #c084fc);
-    }
-
-    body {
-      margin: 0;
-      font-family: 'Segoe UI', sans-serif;
-      background-color: var(--fondo);
-      color: var(--text);
-    }
-
-    header {
-      backdrop-filter: blur(8px);
-      background-color: rgba(14,14,17,0.8);
-      position: fixed;
-      top: 0;
-      width: 100%;
-      z-index: 1000;
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      padding: 0.8rem 2rem;
-      box-shadow: 0 2px 10px var(--sombra);
-    }
-
-    .logo {
-      font-size: 1.5rem;
-      font-weight: bold;
-      color: var(--violeta);
-    }
-
-    nav {
-      display: flex;
-      gap: 1.5rem;
-      align-items: center;
-    }
-
-    nav a {
-      color: var(--text);
-      text-decoration: none;
-      font-weight: 500;
-      transition: color 0.3s;
-      padding: 0.5rem 0;
-    }
-
-    nav a:hover {
-      color: var(--violeta);
-    }
-
-    .menu-toggle {
-      display: none;
-      font-size: 1.5rem;
-      cursor: pointer;
-      color: var(--text);
-    }
-
-    .mobile-menu {
-      display: none;
-      flex-direction: column;
-      background-color: var(--gris);
-      position: absolute;
-      top: 100%;
-      right: 0;
-      width: 200px;
-      padding: 1rem;
-      box-shadow: 0 4px 10px var(--sombra);
-    }
-
-    .mobile-menu a {
-      color: var(--text);
-      text-decoration: none;
-      padding: 0.5rem 0;
-      border-bottom: 1px solid #333;
-    }
-
-    .section {
-      max-width: 1000px;
-      margin: 6rem auto 4rem;
-      padding: 0 1rem;
-      text-align: center;
-    }
-
-    .section h1 {
-      font-size: 2.5rem;
-      margin-bottom: 1rem;
-      color: var(--violeta);
-    }
-
-    .section p {
-      font-size: 1.1rem;
-      color: #ccc;
-    }
-
-    .stats, .features {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 2rem;
-      margin-top: 3rem;
-    }
-
-    .card {
-      background: var(--gris);
-      padding: 1.5rem;
-      border-radius: 1rem;
-      box-shadow: 0 4px 12px var(--sombra);
-      transition: transform 0.3s;
-    }
-
-    .card:hover {
-      transform: translateY(-5px);
-    }
-
-    .bot-logo {
-      margin: 3rem auto 1rem;
-      width: 120px;
-      height: 120px;
-      border-radius: 50%;
-      object-fit: cover;
-      border: 4px solid var(--violeta);
-    }
-
-    .buttons {
-      margin-top: 2rem;
-      display: flex;
-      justify-content: center;
-      gap: 1rem;
-      flex-wrap: wrap;
-    }
-
-    .buttons a {
-      padding: 0.8rem 1.5rem;
-      background-color: var(--violeta);
-      color: white;
-      border-radius: 0.7rem;
-      text-decoration: none;
-      font-weight: bold;
-      transition: background 0.3s;
-    }
-
-    .buttons a:hover {
-      background-color: #6a1cc4;
-    }
-
-    .extra-section {
-      margin-top: 4rem;
-      padding: 2rem;
-    }
-
-    .extra-section h2 {
-      font-size: 2.2rem;
-      background: var(--gradiente);
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
-      text-align: center;
-      margin-bottom: 1rem;
-    }
-
-    .extra-section p {
-      color: #bbb;
-      text-align: center;
-      max-width: 700px;
-      margin: 0 auto;
-      font-size: 1rem;
-    }
-
-    footer {
-      margin-top: 5rem;
-      padding: 2rem 1rem;
-      background-color: #131316;
-      text-align: center;
-      font-size: 0.9rem;
-      color: #aaa;
-      border-top: 1px solid #222;
-    }
-
-    footer .links {
-      margin-top: 1rem;
-      display: flex;
-      justify-content: center;
-      gap: 2rem;
-      flex-wrap: wrap;
-    }
-
-    footer .links a {
-      color: #bbb;
-      text-decoration: none;
-      transition: color 0.3s;
-    }
-
-    footer .links a:hover {
-      color: var(--violeta);
-    }
-
-    @media(max-width: 768px) {
-      nav {
-        display: none;
-      }
-
-      .menu-toggle {
-        display: block;
-      }
-
-      .mobile-menu {
-        display: flex;
-      }
-    }
-  </style>
+  <link rel="stylesheet" href="CSS/styles.css">
 </head>
 <body>
 
+  <!-- Menú lateral -->
+  <div class="sidebar" id="sidebar">
+    <a href="#">Inicio</a>
+    <a href="#">Características</a>
+    <a href="#">Comunidad</a>
+  </div>
+
   <header>
+  <div class="header-content">
     <div class="logo">Nexa</div>
-    <div class="menu-toggle" onclick="toggleMenu()">☰</div>
+    <div class="menu-toggle" id="menuToggle">☰</div>
     <nav>
       <a href="#">Inicio</a>
       <a href="#">Características</a>
       <a href="#">Comunidad</a>
     </nav>
-    <div class="mobile-menu" id="mobileMenu">
-      <a href="#">Inicio</a>
-      <a href="#">Características</a>
-      <a href="#">Comunidad</a>
-    </div>
-  </header>
+  </div>
+</header>
+
 
   <div class="section">
     <h1>Bienvenido a Nexa</h1>
@@ -298,7 +87,7 @@
   <footer>
     <p>© 2025 NexaBot. Todos los derechos reservados.</p>
     <div class="links">
-      <a href="#">Términos y Condiciones</a>
+      <a href="Terminos.y-Condiciones">Términos y Condiciones</a>
       <a href="#">Licencias</a>
       <a href="#">Política de Privacidad</a>
       <a href="#">Contacto</a>
@@ -306,12 +95,6 @@
     </div>
   </footer>
 
-  <script>
-    function toggleMenu() {
-      const menu = document.getElementById('mobileMenu');
-      menu.style.display = menu.style.display === 'flex' ? 'none' : 'flex';
-    }
-  </script>
-
+  <script src="JS/menu.js"></script>
 </body>
 </html>
