--- a/Terminos.y-Condiciones/index.html
+++ b/Terminos.y-Condiciones/index.html
@@ -4,12 +4,6 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Términos y Condiciones - Nexa</title>
-  <meta property="og:title" content="Nexa - Tu Bot de Discord">
-  <meta property="og:description" content="Un bot de Discord multifuncional para moderación, entretenimiento y más.">
-  <meta property="og:image" content="Img/logo.jpg">
-  <meta property="og:type" content="website">
-  <meta name="theme-color" content="#8a2be2">
-  <link rel="icon" href="../Img/logo.jpg" type="image/jpg">
   <link rel="stylesheet" href="../CSS/tos.css" />
 </head>
 <body>
@@ -19,69 +13,76 @@
       <div class="logo">Nexa</div>
       <div class="menu-toggle" id="menuToggle">☰</div>
       <nav>
-        <a href="../index.html">Inicio</a>
-        <a href="features.html">Características</a>
-        <a href="community.html">Comunidad</a>
+        <a href="https//cdhub.store/">Inicio</a>
+        <a href="../features.html">Características</a>
+        <a href="../community.html">Comunidad</a>
       </nav>
     </div>
   </header>
 
   <aside class="sidebar" id="sidebar">
-    <a href="../index.html">Inicio</a>
-    <a href="features.html">Características</a>
-    <a href="community.html">Comunidad</a>
-    <a href="tos.html">Términos y Condiciones</a>
-    <a href="privacy.html">Política de Privacidad</a>
-    <a href="contact.html">Contacto</a>
+    <a href="https//cdhub.store/">Inicio</a>
+    <a href="../features.html">Características</a>
+    <a href="../community.html">Comunidad</a>
+    <a href="#">Términos y Condiciones</a>
   </aside>
 
-  <main class="content">
-    <h1>Términos y Condiciones de Uso</h1>
-
+  <main class="tos-container">
+    <h1>Términos y Condiciones</h1>
+    
     <section>
       <h2>1. Introducción</h2>
-      <p>Bienvenido a Nexa. Al utilizar nuestros servicios, aceptas los siguientes términos y condiciones...</p>
+      <p>Bienvenido a Nexa. Al usar nuestros servicios, aceptas estos términos y condiciones en su totalidad.</p>
     </section>
 
     <section>
       <h2>2. Uso del Servicio</h2>
-      <p>El usuario se compromete a utilizar Nexa únicamente para fines legales y conforme a las leyes vigentes...</p>
+      <p>Está prohibido utilizar Nexa para actividades ilegales o que infrinjan derechos de terceros. Debes respetar las normas de conducta y los términos específicos de cada función.</p>
     </section>
 
     <section>
-      <h2>3. Propiedad Intelectual</h2>
-      <p>Todo el contenido, marcas y materiales relacionados con Nexa están protegidos por derechos de autor...</p>
+      <h2>3. Registro y Seguridad</h2>
+      <p>Es tu responsabilidad mantener la confidencialidad de tus credenciales y notificar cualquier acceso no autorizado.</p>
     </section>
 
     <section>
-      <h2>4. Responsabilidades</h2>
-      <p>Nexa no se hace responsable por daños derivados del uso indebido del bot o pérdida de datos...</p>
+      <h2>4. Contenido del Usuario</h2>
+      <p>Eres responsable del contenido que compartas a través de Nexa. No asumimos responsabilidad por dicho contenido.</p>
     </section>
 
     <section>
-      <h2>5. Privacidad</h2>
-      <p>Para más detalles sobre el manejo de datos personales, consulta nuestra Política de Privacidad.</p>
+      <h2>5. Privacidad y Datos</h2>
+      <p>Tratamos tus datos conforme a nuestra <a href="../Politicas-de-Privacidad">Política de Privacidad</a>. No compartiremos tus datos sin consentimiento salvo obligación legal.</p>
     </section>
 
     <section>
       <h2>6. Modificaciones</h2>
-      <p>Nexa puede modificar estos términos en cualquier momento, notificando a los usuarios oportunamente.</p>
+      <p>Podemos modificar estos términos en cualquier momento. La versión actualizada será publicada en esta página.</p>
     </section>
 
     <section>
-      <h2>7. Contacto</h2>
-      <p>Si tienes dudas sobre estos términos, contáctanos a través de nuestro sitio web.</p>
+      <h2>7. Limitación de Responsabilidad</h2>
+      <p>No garantizamos que Nexa sea libre de errores o interrupciones. No seremos responsables por daños indirectos o consecuentes.</p>
     </section>
 
+    <section>
+      <h2>8. Ley Aplicable</h2>
+      <p>Estos términos se rigen por las leyes aplicables en la jurisdicción donde operamos.</p>
+    </section>
+
+    <section>
+      <h2>9. Contacto</h2>
+      <p>Para consultas sobre estos términos, contáctanos en <a href="mailto:soporte@nexa.com">soporte@nexa.com</a>.</p>
+    </section>
   </main>
 
   <footer>
     <p>© 2025 NexaBot. Todos los derechos reservados.</p>
     <div class="links">
       <a href="#">Términos y Condiciones</a>
-      <a href="privacy.html">Política de Privacidad</a>
-      <a href="contact.html">Contacto</a>
-      <a href="status.html">Estado del Bot</a>
+      <a href="../Licencias">Licencias</a>
+      <a href="../Politicas-de-Privacidad">Política de Privacidad</a>
+      <a href="../Contacto">Contacto</a>
     </div>
   </footer>
 
