--- a/Terminos.y-Condiciones/index.html
+++ b/Terminos.y-Condiciones/index.html
@@ -4,7 +4,14 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Términos y Condiciones - Nexa</title>
+  <meta name="description" content="Lee los términos y condiciones de uso del bot Nexa para Discord. Información detallada sobre uso, privacidad y responsabilidades." />
+  <meta name="author" content="Nexa Team" />
+  <meta property="og:title" content="Términos y Condiciones - Nexa" />
+  <meta property="og:description" content="Lee los términos y condiciones de uso del bot Nexa para Discord." />
+  <meta property="og:type" content="website" />
+  <meta property="og:image" content="https://cdhub.store/Img/logo.jpg" />
   <link rel="stylesheet" href="../CSS/tos.css" />
+  <link rel="icon" href="../Img/logo.jpg" type="image/jpg">
 </head>
 <body>
 
@@ -13,18 +20,17 @@
       <div class="logo">Nexa</div>
       <div class="menu-toggle" id="menuToggle">☰</div>
       <nav>
-        <a href="https//cdhub.store/">Inicio</a>
-        <a href="../features.html">Características</a>
-        <a href="../community.html">Comunidad</a>
+        <a href="../">Inicio</a>
+        <a href="../Features">Características</a>
+        <a href="../Comunidad">Comunidad</a>
       </nav>
     </div>
   </header>
 
   <aside class="sidebar" id="sidebar">
-    <a href="https//cdhub.store/">Inicio</a>
-    <a href="../features.html">Características</a>
-    <a href="../community.html">Comunidad</a>
-    <a href="#">Términos y Condiciones</a>
+    <a href="../">Inicio</a>
+    <a href="../Features">Características</a>
+    <a href="../Comunidad">Comunidad</a>
   </aside>
 
   <main class="tos-container">
@@ -32,48 +38,49 @@
     
     <section>
       <h2>1. Introducción</h2>
-      <p>Bienvenido a Nexa. Al usar nuestros servicios, aceptas estos términos y condiciones en su totalidad.</p>
+      <p>Bienvenido a Nexa, tu bot multifuncional para Discord. Al agregar Nexa a tu servidor y utilizar sus servicios, aceptas cumplir con estos términos y condiciones en su totalidad.</p>
     </section>
 
     <section>
-      <h2>2. Uso del Servicio</h2>
-      <p>Está prohibido utilizar Nexa para actividades ilegales o que infrinjan derechos de terceros. Debes respetar las normas de conducta y los términos específicos de cada función.</p>
+      <h2>2. Uso del Bot</h2>
+      <p>El bot Nexa está diseñado para mejorar la experiencia en servidores de Discord mediante herramientas de moderación, entretenimiento y personalización. Está prohibido utilizar Nexa para actividades que violen las normas de Discord, leyes locales o derechos de terceros.</p>
     </section>
 
     <section>
-      <h2>3. Registro y Seguridad</h2>
-      <p>Es tu responsabilidad mantener la confidencialidad de tus credenciales y notificar cualquier acceso no autorizado.</p>
+      <h2>3. Responsabilidad del Administrador</h2>
+      <p>El administrador del servidor es responsable de la correcta configuración y uso de Nexa, así como del contenido generado a través del bot.</p>
     </section>
 
     <section>
-      <h2>4. Contenido del Usuario</h2>
-      <p>Eres responsable del contenido que compartas a través de Nexa. No asumimos responsabilidad por dicho contenido.</p>
+      <h2>4. Contenido Generado por Usuarios</h2>
+      <p>Nexa no es responsable del contenido que los usuarios publiquen o compartan en el servidor utilizando comandos o funcionalidades del bot. Es responsabilidad del servidor moderar y gestionar este contenido conforme a sus reglas.</p>
     </section>
 
     <section>
       <h2>5. Privacidad y Datos</h2>
-      <p>Tratamos tus datos conforme a nuestra <a href="../Politicas-de-Privacidad">Política de Privacidad</a>. No compartiremos tus datos sin consentimiento salvo obligación legal.</p>
+      <p>Nexa recopila y utiliza ciertos datos necesarios para su funcionamiento, como mensajes y configuraciones del servidor, de acuerdo con nuestra <a href="../Politicas-de-Privacidad">Política de Privacidad</a>. No compartiremos datos personales fuera de lo estrictamente necesario para la operación del bot y conforme a la ley.</p>
     </section>
 
     <section>
-      <h2>6. Modificaciones</h2>
-      <p>Podemos modificar estos términos en cualquier momento. La versión actualizada será publicada en esta página.</p>
+      <h2>6. Cambios en los Términos</h2>
+      <p>Nexa se reserva el derecho de modificar estos términos en cualquier momento. Las actualizaciones se publicarán en esta página y entrarán en vigor al ser publicadas.</p>
     </section>
 
     <section>
       <h2>7. Limitación de Responsabilidad</h2>
-      <p>No garantizamos que Nexa sea libre de errores o interrupciones. No seremos responsables por daños indirectos o consecuentes.</p>
+      <p>No garantizamos que Nexa funcione sin interrupciones o errores. Nexa no será responsable por daños directos, indirectos o consecuentes derivados del uso o la imposibilidad de uso del bot.</p>
     </section>
 
     <section>
-      <h2>8. Ley Aplicable</h2>
-      <p>Estos términos se rigen por las leyes aplicables en la jurisdicción donde operamos.</p>
+      <h2>8. Terminación y Suspensión</h2>
+      <p>Podemos suspender o retirar el acceso a Nexa en cualquier servidor que incumpla estos términos o las políticas de Discord, sin previo aviso.</p>
     </section>
 
     <section>
-      <h2>9. Contacto</h2>
-      <p>Para consultas sobre estos términos, contáctanos en <a href="mailto:soporte@nexa.com">soporte@nexa.com</a>.</p>
+      <h2>9. Ley Aplicable</h2>
+      <p>Estos términos se rigen por las leyes del país en que opera Nexa. Para cualquier disputa, se considerará la jurisdicción correspondiente.</p>
     </section>
+
   </main>
 
   <footer>
