--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
   <!-- Menú lateral -->
   <div class="sidebar" id="sidebar">
     <a href="#">Inicio</a>
-    <a href="#">Características</a>
-    <a href="#">Comunidad</a>
+    <a href="Features">Características</a>
+    <a href="Comunidad">Comunidad</a>
   </div>
 
   <header>
@@ -28,8 +28,8 @@
     <div class="menu-toggle" id="menuToggle">☰</div>
     <nav>
       <a href="#">Inicio</a>
-      <a href="#">Características</a>
-      <a href="#">Comunidad</a>
+      <a href="Features">Características</a>
+      <a href="Comunidad">Comunidad</a>
     </nav>
   </div>
 </header>
@@ -88,10 +88,9 @@
     <p>© 2025 NexaBot. Todos los derechos reservados.</p>
     <div class="links">
       <a href="Terminos.y-Condiciones">Términos y Condiciones</a>
-      <a href="#">Licencias</a>
-      <a href="#">Política de Privacidad</a>
-      <a href="#">Contacto</a>
-      <a href="#">Estado del Bot</a>
+      <a href="Licencias">Licencias</a>
+      <a href="Politicas-de-Privacidad">Política de Privacidad</a>
+      <a href="Contacto">Contacto</a>
     </div>
   </footer>
 
