--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <a href="#">Inicio</a>
     <a href="Features">Características</a>
     <a href="Comunidad">Comunidad</a>
+     <a href="Premium" class="btn-topbar">Premium</a>
   </div>
 
   <header>
@@ -30,24 +31,30 @@
       <a href="#">Inicio</a>
       <a href="Features">Características</a>
       <a href="Comunidad">Comunidad</a>
+      <a href="#" class="btn-topbar">Premium</a>
     </nav>
   </div>
 </header>
 
-
-  <div class="section">
-    <h1>Bienvenido a Nexa</h1>
-    <p>Un bot multifuncional para moderación, entretenimiento y personalización en tu servidor de Discord.</p>
-  </div>
-
-  <div class="section">
-    <img src="Img/logo.jpg" class="bot-logo" alt="Logo de Nexa">
-    <p>Nexa está diseñado para ser rápido, intuitivo y poderoso. Úsalo para controlar logs, roles, comandos y más en cualquier servidor.</p>
-    <div class="buttons">
-      <a href="#">Añadir Bot</a>
-      <a href="#">Configurar</a>
+   <main class="hero-section">
+  <div class="hero-content">
+    <div class="hero-text">
+      <h1>Bienvenido a Nexa</h1>
+      <p>Un bot multifuncional para moderación, entretenimiento y personalización en tu servidor de Discord.</p>
+      <div class="hero-buttons">
+        <a href="#" class="btn-primary">Añadir Bot</a>
+        <a href="#" class="btn-secondary">Configurar</a>
+      </div>
+    </div>
+    <div class="hero-image">
+      <img src="Img/logo.jpg" alt="Logo de Nexa" />
     </div>
   </div>
+</main>
+
+<section class="hero-bottom-separator">
+  <p>Gestiona tu servidor con Nexa y mejora la experiencia de tu comunidad.</p>
+</section>
 
   <div class="section stats">
     <div class="card">
@@ -79,15 +86,119 @@
     </div>
   </div>
 
-  <div class="extra-section">
-    <h2>¡Explora Nexa y transforma tu servidor!</h2>
-    <p>Gestiona todo desde un solo bot, ahorra tiempo y brinda una mejor experiencia a tus miembros. Nexa evoluciona contigo.</p>
+ <section class="explore-nexa-box">
+  <h2>¡Explora Nexa y transforma tu servidor!</h2>
+  <p>Gestiona todo desde un solo bot, ahorra tiempo y brinda una mejor experiencia a tus miembros. Nexa evoluciona contigo.</p>
+</section>
+
+<section class="welcome-message-section">
+  <div class="welcome-embed">
+    <div class="embed-header">
+      <img class="embed-avatar" src="Img/logo.jpg" alt="NexaBot Logo" />
+      <span class="embed-author">Nexa</span>
+    </div>
+    <div class="embed-content">
+      <span class="mention">@Usuario</span>, ¡bienvenido al servidor! 🎉 Estamos felices de tenerte aquí.
+    </div>
   </div>
+  <div class="welcome-text">
+    <h2>Mensaje de Bienvenida</h2>
+    <p>Personaliza el mensaje que Nexa enviará cuando un nuevo miembro se una a tu servidor. Da la bienvenida de manera cálida y profesional.</p>
+  </div>
+</section>
+
+<section class="top5-dinero-section">
+  <div class="top5-text">
+    <h2>Top 5 Usuarios con Más Dinero</h2>
+    <p>Descubre quiénes son los miembros más activos y exitosos en la economía de tu servidor. Compite, sube de nivel y gana recompensas.</p>
+  </div>
+  <table class="top5-table">
+    <thead>
+      <tr>
+        <th>Posición</th>
+        <th>Usuario</th>
+        <th>Dinero</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr><td>1</td><td>@Usuario1</td><td>$1.250.000</td></tr>
+      <tr><td>2</td><td>@Usuario2</td><td>$1.000.000</td></tr>
+      <tr><td>3</td><td>@Usuario3</td><td>$850.000</td></tr>
+      <tr><td>4</td><td>@Usuario4</td><td>$620.000</td></tr>
+      <tr><td>5</td><td>@Usuario5</td><td>$500.000</td></tr>
+    </tbody>
+  </table>
+</section>
+
+<section class="moderation-section">
+  <div class="moderation-example">
+    <div class="mod-box">
+      <div class="mod-header">
+        <span class="mod-title">#mod-logs</span>
+        <span class="mod-timestamp">Hoy a las 18:42</span>
+      </div>
+      <div class="mod-content">
+        <p><strong>Usuario:</strong> @stormvexx</p>
+        <p><strong>Acción:</strong> Kick</p>
+        <p><strong>Razón:</strong> Spam excesivo</p>
+      </div>
+    </div>
+  </div>
+  <div class="moderation-info">
+    <h2>Moderación efectiva</h2>
+    <p>Gestiona fácilmente acciones como baneos, expulsiones, mutear usuarios y más. Mantén tu servidor seguro y organizado con registros claros y accesibles.</p>
+    <div class="more-options">⋮</div>
+  </div>
+</section>
+
+
+
+
+<section class="wiki-section">
+  <div class="wiki-content">
+    <div class="wiki-text">
+      <h2>Wiki Oficial de Nexa</h2>
+      <p>Accede a la documentación completa y aprende a sacar el máximo provecho de Nexa. Pronto disponible para todos los usuarios.</p>
+      <div class="wiki-cards">
+        <div class="wiki-card">
+          <span class="icon">📚</span>
+          <div>
+            <h4>Guías Completas</h4>
+            <p>Aprende paso a paso cómo usar cada función del bot.</p>
+          </div>
+        </div>
+        <div class="wiki-card">
+          <span class="icon">⚙️</span>
+          <div>
+            <h4>Configuraciones</h4>
+            <p>Descubre cómo personalizar Nexa según tu servidor.</p>
+          </div>
+        </div>
+        <div class="wiki-card">
+          <span class="icon">❓</span>
+          <div>
+            <h4>Preguntas Frecuentes</h4>
+            <p>Resuelve dudas comunes de forma rápida y sencilla.</p>
+          </div>
+        </div>
+      </div>
+      <button class="btn-secondary" disabled>Próximamente</button>
+    </div>
+  </div>
+</section>
+
+<hr class="separator" />
+
+<section class="addbot-section">
+  <h2>Añade Nexa a tu servidor y comienza hoy con tu Aventura</h2>
+  <a href="#" class="btn-outline">Añadir Bot</a>
+</section>
+
 
   <footer>
     <p>© 2025 NexaBot. Todos los derechos reservados.</p>
     <div class="links">
-      <a href="Terminos.y-Condiciones">Términos y Condiciones</a>
+      <a href="Terminos-y-Condiciones">Términos y Condiciones</a>
       <a href="Licencias">Licencias</a>
       <a href="Politicas-de-Privacidad">Política de Privacidad</a>
       <a href="Contacto">Contacto</a>
