--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <a href="#">Inicio</a>
       <a href="Features">Características</a>
       <a href="Comunidad">Comunidad</a>
-      <a href="#" class="btn-topbar">Premium</a>
+      <a href="Premium" class="btn-topbar">Premium</a>
     </nav>
   </div>
 </header>
