--- a/index.html
+++ b/index.html
@@ -107,23 +107,24 @@
   </div>
 </section>
 
+
 <section class="top5-dinero-section">
   <div class="top5-text">
     <h2>Top 5 Usuarios con Más Dinero</h2>
-    <p>Descubre quiénes son los miembros más activos y exitosos en la economía de tu servidor. Compite, sube de nivel y gana recompensas.</p>
+    <p>Descubre quiénes lideran la economía del servidor. ¡Compite, gana y alcanza la cima!</p>
   </div>
   <table class="top5-table">
     <thead>
       <tr>
-        <th>Posición</th>
+        <th>#</th>
         <th>Usuario</th>
         <th>Dinero</th>
       </tr>
     </thead>
     <tbody>
-      <tr><td>1</td><td>@Usuario1</td><td>$1.250.000</td></tr>
-      <tr><td>2</td><td>@Usuario2</td><td>$1.000.000</td></tr>
-      <tr><td>3</td><td>@Usuario3</td><td>$850.000</td></tr>
+      <tr class="top1"><td>🥇</td><td>@Usuario1</td><td>$1.250.000</td></tr>
+      <tr class="top2"><td>🥈</td><td>@Usuario2</td><td>$1.000.000</td></tr>
+      <tr class="top3"><td>🥉</td><td>@Usuario3</td><td>$850.000</td></tr>
       <tr><td>4</td><td>@Usuario4</td><td>$620.000</td></tr>
       <tr><td>5</td><td>@Usuario5</td><td>$500.000</td></tr>
     </tbody>
