--- a/Premium/index.html
+++ b/Premium/index.html
@@ -89,7 +89,7 @@
           <li>✓ Soporte dedicado 24/7</li>
           <li>✓ Acceso anticipado a nuevas funciones</li>
         </ul>
-        <a href="#" class="btn-secondary" style="padding: 0.8rem 1.8rem; font-weight: 700; border-radius: 50px; border: 2.5px solid white; color: white; text-decoration: none; transition: background-color 0.3s ease, border-color 0.3s ease; cursor: not-allowed; opacity: 0.7;">Próximamente</a>
+        <a href="https://checkout.stripe.com/pay/cs_test_XXXX" class="btn-secondary" style="padding: 0.8rem 1.8rem; font-weight: 700; border-radius: 50px; border: 2.5px solid white; color: white; text-decoration: none; transition: background-color 0.3s ease, border-color 0.3s ease; cursor: not-allowed; opacity: 0.7;">Próximamente</a>
       </div>
 
     </section>
